layout fixes while integration p.5: margin-collapse fix

--- a/src/scss/main.app.scss
+++ b/src/scss/main.app.scss
@@ -456,9 +456,13 @@ textarea[class*="form-control"]:focus {
   --cs-logo: url('@images/logo.svg');
   --cs-logo-alt: url('@images/logo-alt.svg');
   --cs-zoom: 1;
+  --cs-mb-top: 60px;
+  --cs-mb-bottom: 60px;
 
   @include media-breakpoint-up(sm) {
     --cs-breakpoint-max: #{$cs-breakpoint-md - 1};
+    --cs-mb-top: 100px;
+    --cs-mb-bottom: 100px;
   }
   @include media-breakpoint-up(md) {
     --cs-breakpoint-max: #{$cs-breakpoint-lg - 1};
@@ -531,8 +535,6 @@ textarea[class*="form-control"]:focus {
   }
 }
 .margin-box {
-  --cs-mb-top: 60px;
-  --cs-mb-bottom: 60px;
   margin-bottom: var(--cs-mb-bottom);
 
   & + .margin-box {
@@ -542,11 +544,6 @@ textarea[class*="form-control"]:focus {
   & + .margin-collapse {
     margin-top: calc(var(--cs-mb-top) * -1);
     visibility: hidden;
-  }
-
-  @include media-breakpoint-up(sm) {
-    --cs-mb-top: 100px;
-    --cs-mb-bottom: 100px;
   }
 }
 
